--- a/app/src/main/res/layout/activity_story_list.xml
+++ b/app/src/main/res/layout/activity_story_list.xml
@@ -37,4 +37,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/story_add_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/purple_700"
+        android:backgroundTint="@color/purple_700"
+        android:clickable="true"
+        android:contentDescription="@string/add_story_fab_alt"
+        android:focusable="true"
+        android:tint="@android:color/white"
+        app:tint="@android:color/white"
+        app:backgroundTint="@color/purple_700"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        tools:ignore="RedundantDescriptionCheck" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
