chore: delete dark theme

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,6 +87,8 @@
                 android:id="@+id/email_input_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/purple_200"
+                android:textColor="@color/black"
                 android:ems="10"
                 android:inputType="textEmailAddress"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -124,6 +126,8 @@
                 android:id="@+id/password_input_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/purple_200"
+                android:textColor="@color/black"
                 android:ems="10"
                 android:inputType="textPassword"
                 app:passwordToggleEnabled="true"
